--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,15 +12,21 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #7E8993;
+    --background: #171717;;
     --foreground: #ededed;
   }
+} */
+
+html {
+  height: 100%;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0; /* Ensure no default margin interferes */
+  min-height: 100%; /* Ensure the body also takes up the full height */
 }
